<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:asd="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.fragments.DealingFragment"
    android:background="@drawable/bg">

    <LinearLayout
        android:id="@+id/fragment_dealing_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/progressBarStyleLarge"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/tabsLayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/toolbarColor">

        <android.support.design.widget.TabLayout
            android:id="@+id/dealingTabs"
            style="@style/AppTabLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            asd:tabIndicatorColor="@color/accentButtonGradientStartColor"
            asd:tabTextAppearance="@style/AppTabTextAppearance">

            <android.support.design.widget.TabItem
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/dealing_page_tab_name_open" />

            <android.support.design.widget.TabItem
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@string/dealing_page_tab_name_close" />
        </android.support.design.widget.TabLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fragment_dealing_list"
        android:layout_below="@+id/tabsLayout"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <LinearLayout
            android:id="@+id/titleListOpen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:paddingBottom="4dp"
            android:weightSum="11">

            <TextView
                android:id="@+id/tv_dealing_header_col1_active"
                style="@style/DealingTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                tools:text="@string/dealing_page_open_active" />

            <TextView
                android:id="@+id/tv_dealing_header_col2_open"
                style="@style/DealingTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:text="@string/dealing_page_open_open" />

            <TextView
                android:id="@+id/fragment_dealing_header_column_3"
                style="@style/DealingTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:text="@string/dealing_page_open_market" />

            <TextView
                android:id="@+id/fragment_dealing_header_column_4"
                style="@style/DealingTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:text="@string/dealing_page_open_amount" />

            <TextView
                android:id="@+id/fragment_dealing_header_column_5"
                style="@style/DealingTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                tools:text="@string/dealing_page_open_time" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/ordersListOpen"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fragment_dealing_no_elements_layout"
        android:layout_below="@+id/tabsLayout"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:visibility="gone"
        android:paddingTop="8dp">
        <TextView
            style="@style/BoldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No such orders"
            android:textSize="@dimen/dealing_fragment_no_orders_message_size" />
    </LinearLayout>
</RelativeLayout>
