<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="20dp"
    android:orientation="vertical"
    android:background="@color/dialog_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            tools:text="Information"
            style="@style/LigthText"
            android:textSize="20sp"
            android:id="@+id/tvToolbarDialog" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            tools:text="@string/logout"
            style="@style/LigthText"
            android:id="@+id/tvInfoMsg"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="right|bottom">

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/LigthText"
            android:textColor="@color/colorAccent"
            android:text="@string/cancel"
            android:paddingRight="30dp"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tvOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/LigthText"
            android:textColor="@color/dealingListUpOrderColor"
            android:text="@string/ok"
            android:paddingRight="16dp"
            android:textSize="16sp"/>
    </LinearLayout>
</LinearLayout>