<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/ll_top_panel"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:gravity="top"
    android:layout_height="60dp"
    android:paddingTop="10dp"
    android:paddingLeft="8dp"
    android:paddingRight="8dp"
    android:background="@color/dialog_bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rlErrorSignal"
        android:visibility="gone">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:id="@+id/tvErrorSignal"
            android:textColor="@color/color_text_deposit"
            tools:text="@string/error_find_signal"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <TextView
            style="@style/BoldText"
            android:id="@+id/tv_currency"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            tools:text="EURUSD"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textSize="10sp"/>

        <TextView
            style="@style/BoldText"
            android:id="@+id/tv_amout"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="4dp"
            tools:text="75.56"
            android:textStyle="bold"
            android:textColor="@color/dealingListTitlesColor"
            android:textSize="10sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            style="@style/BoldText"
            android:id="@+id/tv_time1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/_1_minute"
            android:textStyle="bold"
            android:textColor="@color/dealingListTitlesColor"
            android:textSize="10sp"/>

        <TextView
            style="@style/BoldText"
            android:id="@+id/tv_time1_value"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="4dp"
            tools:text="ACTIVELY BUY"
            android:textStyle="bold"
            android:textColor="@color/dealingListUpOrderColor"
            android:textSize="10sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            style="@style/BoldText"
            android:id="@+id/tv_time2"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/minutes2Cell"
            android:textStyle="bold"
            android:textColor="@color/dealingListTitlesColor"
            android:textSize="10sp"/>

        <TextView
            style="@style/BoldText"
            android:id="@+id/tv_time2_value"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="4dp"
            tools:text="ACTIVELY BUY"
            android:textStyle="bold"
            android:textColor="@color/dealingListDownOrderColor"
            android:textSize="10sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            style="@style/BoldText"
            android:id="@+id/tv_time3"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/minutes3Cell"
            android:textStyle="bold"
            android:textColor="@color/dealingListTitlesColor"
            android:textSize="10sp"/>

        <TextView
            style="@style/BoldText"
            android:id="@+id/tv_time3_value"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="4dp"
            tools:text="ACTIVELY BUY"
            android:textStyle="bold"
            android:textColor="@color/dealingListUpOrderColor"
            android:textSize="10sp"/>
    </LinearLayout>
</LinearLayout>